[gd_scene load_steps=63 format=2]

[ext_resource path="res://Bomb.gd" type="Script" id=1]
[ext_resource path="res://bomba.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://sprites/rogue like idle_Animation 1_0.png" type="Texture" id=4]
[ext_resource path="res://sprites/rogue like idle_Animation 1_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/rogue like idle_Animation 1_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/rogue like run_Animation 1_0.png" type="Texture" id=7]
[ext_resource path="res://sprites/rogue like run_Animation 1_1.png" type="Texture" id=8]
[ext_resource path="res://sprites/rogue like run_Animation 1_2.png" type="Texture" id=9]
[ext_resource path="res://sprites/rogue like run_Animation 1_3.png" type="Texture" id=10]
[ext_resource path="res://sprites/rogue like run_Animation 1_4.png" type="Texture" id=11]
[ext_resource path="res://sprites/rogue like run_Animation 1_5.png" type="Texture" id=12]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 0 immortal.png" type="Texture" id=13]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 1 immortal.png" type="Texture" id=14]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 2 immortal.png" type="Texture" id=15]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 3 immortal.png" type="Texture" id=16]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 4 immortal.png" type="Texture" id=17]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 5 immortal.png" type="Texture" id=18]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 6 immortal.png" type="Texture" id=19]
[ext_resource path="res://sprites immortal/rogue like run up_Animation 7 immortal.png" type="Texture" id=20]
[ext_resource path="res://sprites/roguelike run down_Animation 1_0.png" type="Texture" id=21]
[ext_resource path="res://sprites/roguelike run down_Animation 1_1.png" type="Texture" id=22]
[ext_resource path="res://sprites/roguelike run down_Animation 1_2.png" type="Texture" id=23]
[ext_resource path="res://sprites/roguelike run down_Animation 1_3.png" type="Texture" id=24]
[ext_resource path="res://sprites immortal/rogue like idle_Animation 0 immortal.png" type="Texture" id=25]
[ext_resource path="res://sprites immortal/rogue like idle_Animation 1 immortal.png" type="Texture" id=26]
[ext_resource path="res://sprites immortal/rogue like idle_Animation 2 immortal.png" type="Texture" id=27]
[ext_resource path="res://sprites immortal/rogue like idle_Animation 3 immortal.png" type="Texture" id=28]
[ext_resource path="res://sprites immortal/rogue like idle_Animation 4 immortal.png" type="Texture" id=29]
[ext_resource path="res://sprites immortal/rogue like idle_Animation 5 immortal.png" type="Texture" id=30]
[ext_resource path="res://sprites immortal/rogue like run_Animation 0 immortal.png" type="Texture" id=31]
[ext_resource path="res://sprites immortal/rogue like run_Animation 1 immortal.png" type="Texture" id=32]
[ext_resource path="res://sprites immortal/rogue like run_Animation 2 immortal.png" type="Texture" id=33]
[ext_resource path="res://sprites immortal/rogue like run_Animation 3 immortal.png" type="Texture" id=34]
[ext_resource path="res://sprites immortal/rogue like run_Animation 4 immortal.png" type="Texture" id=35]
[ext_resource path="res://sprites immortal/rogue like run_Animation 5 immortal.png" type="Texture" id=36]
[ext_resource path="res://sprites immortal/rogue like run_Animation 6 immortal.png" type="Texture" id=37]
[ext_resource path="res://sprites immortal/rogue like run_Animation 7 immortal.png" type="Texture" id=38]
[ext_resource path="res://sprites immortal/rogue like run_Animation 8 immortal.png" type="Texture" id=39]
[ext_resource path="res://sprites immortal/rogue like run_Animation 9 immortal.png" type="Texture" id=40]
[ext_resource path="res://sprites immortal/rogue like run_Animation 10 immortal.png" type="Texture" id=41]
[ext_resource path="res://sprites immortal/rogue like run_Animation 11 immortal.png" type="Texture" id=42]
[ext_resource path="res://sprites/rogue like run up_Animation 1_0.png" type="Texture" id=43]
[ext_resource path="res://sprites/rogue like run up_Animation 1_1.png" type="Texture" id=44]
[ext_resource path="res://sprites/rogue like run up_Animation 1_2.png" type="Texture" id=45]
[ext_resource path="res://sprites/rogue like run up_Animation 1_3.png" type="Texture" id=46]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 0 immortal.png" type="Texture" id=47]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 1 immortal.png" type="Texture" id=48]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 2 immortal.png" type="Texture" id=49]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 3 immortal.png" type="Texture" id=50]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 4 immortal.png" type="Texture" id=51]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 5 immortal.png" type="Texture" id=52]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 6 immortal.png" type="Texture" id=53]
[ext_resource path="res://sprites immortal/roguelike run down_Animation 7 immortal.png" type="Texture" id=54]
[ext_resource path="res://MoreBombs.tscn" type="PackedScene" id=55]
[ext_resource path="res://BetterBombs.tscn" type="PackedScene" id=56]
[ext_resource path="res://SpeedUP.tscn" type="PackedScene" id=57]
[ext_resource path="res://StaticBody2D.gd" type="Script" id=58]
[ext_resource path="res://destroyable.jpg" type="Texture" id=59]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "runUP_IMMORTAL",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "runDOWN",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "idle_IMMORTAL",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "run_IMMORTAL",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "runUP",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "runDOWN_IMMORTAL",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 31.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="world" type="Node"]

[node name="Bomb" type="StaticBody2D" parent="."]
position = Vector2( -96, 96 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Bomb"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 32, 64 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 1 )
animation = "run"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="MoreBombs" parent="." instance=ExtResource( 55 )]

[node name="BetterBombs" parent="." instance=ExtResource( 56 )]

[node name="SpeedUP" parent="." instance=ExtResource( 57 )]

[node name="StaticBody2D" type="Area2D" parent="."]
position = Vector2( 32, 160 )
script = ExtResource( 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
scale = Vector2( 0.284444, 0.284444 )
texture = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="StaticBody2D2" type="Area2D" parent="."]
position = Vector2( 96, 160 )
script = ExtResource( 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D2"]
scale = Vector2( 0.284444, 0.284444 )
texture = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 3 )

[node name="StaticBody2D3" type="Area2D" parent="."]
position = Vector2( 160, 160 )
script = ExtResource( 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D3"]
scale = Vector2( 0.284444, 0.284444 )
texture = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource( 3 )

[node name="StaticBody2D4" type="Area2D" parent="."]
position = Vector2( 224, 160 )
script = ExtResource( 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D4"]
scale = Vector2( 0.284444, 0.284444 )
texture = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource( 3 )

[node name="StaticBody2D5" type="Area2D" parent="."]
position = Vector2( 288, 160 )
script = ExtResource( 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D5"]
scale = Vector2( 0.284444, 0.284444 )
texture = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
shape = SubResource( 3 )

